--- a/web-app-vue/package.json
+++ b/web-app-vue/package.json
@@ -16,7 +16,13 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "nouislider": "11.1.0",
+    "v-tooltip": "2.0.0-rc.33",
+    "vue-carousel": "0.13.1",
+    "vue-clickaway": "2.2.2",
+    "vue-lazyload": "1.2.6",
+    "vue-material": "1.0.0-beta-10.2"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
