--- a/web-app-vue/tsconfig.json
+++ b/web-app-vue/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
+    "allowJs": true,
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
@@ -37,5 +38,5 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
 }
